[project]
name = "cds-app"
version = "0.1.0"
description = "Meta repopository for CosmicDS"
readme = "README.md"
authors = [
    { name = "CosmicDS Developers", email = "pudomprasert@cfa.harvard.edu" }
]
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.5.2",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "pydantic>=2.11.2",
    "solara>=1.44.1",
    "solara-enterprise>=1.44.1",
]

[project.scripts]
cds-app = "cds_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "ruff>=0.11.3",
]
